# timekeeper

./: .clinerules  .clinerules-timekeeper-architect  .clinerules-timekeeper-docs  .env.example  .gitignore  .roomodes  .roomodes.template  Dockerfile  LICENSE.md  Makefile  README.md  _quarto.yml  index.qmd  pyproject.md.orig  pyproject.toml  quarto.yml  styles.css  timekeeper-zshrc-addition.txt
.github/: GITHUB_SETUP.md  README.md
.github/workflows/: ci.yml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
_build/api/: search.html
_build/api/_static/: custom.css
_build/api/modules/: morphisms.html
_build/site/: index.html
_build/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/sphinx/.doctrees/: environment.pickle  index.doctree
_build/sphinx/_modules/: agent_temporal.html  index.html  task_scheduler.html  visualization.html
_build/sphinx/_sources/: index.rst.txt
_build/sphinx/_static/: custom.css
_build/sphinx/doctrees/: environment.pickle  index.doctree
_build/sphinx/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/sphinx/modules/: adaptive_agent_temporal.html  agent_temporal.html  (+2 more)
config/quarto/: _quarto.yml
config/sphinx/: Makefile  conf.py  index.rst
docs/: README.md
docs/architecture/: README.md  development-roadmap.md  mvp-completion-roadmap.md  system-overview.md
docs/dev-guides/: integration-guide.md  rooguide.md
docs/examples/: complete_workflow_example.md
docs/implementation/: adaptive_system.md  agent_temporal.md  agent_temporal_docstring_enhancement_plan.md  docstring_enhancement_guide.md  index.md  index.qmd  integration_test_examples.md  integration_tests_plan.md  latex_style_guide.md  phase2_implementation_timeline.md  task_scheduler.md  task_scheduler_integration_test_plan.md  time_flow_verification_test_implementation.md  vertex-ai-workbench-integration-plan.md
docs/reference/: README.md  gcp-consultant-briefing.md  gcp-consultant-recommendation.md
docs/research/: index.md  index.qmd
docs/sphinx/: conf.py
docs/theory/: adaptive_systems.md  hierarchical_partition.md  hierarchical_partition.qmd  index.md  index.qmd  lattice_structure.md  lattice_structure.qmd  morphisms.md  morphisms.qmd  task_scheduling.md  temporal_universe.md  temporal_universe.qmd  timepoint_operations.md  timepoint_operations.qmd
memory-bank/: activeContext.md  decisionLog.md  documentation-deduplication-strategy.md  enhanced-ci-workflow.md  gcp-credentials-integration.md  phase2-implementation-plan.md  productContext.md  progress.md  systemPatterns.md
quarto/_templates/: standard-document.qmd
quarto/browse/: categories.qmd
quarto/concepts/: principles.qmd
quarto/docs/: getting-started.qmd  index.qmd  interactive-demo.qmd  math-to-code.qmd
quarto/research/: hypotheses.qmd  index.qmd
scripts/: build_docs.py  build_website.sh  integrate_components.py  setup_env_tokens.sh  setup_environment.sh  setup_workbench_env.sh  test_vertex_connection.py
src/python/: __init__.py  adaptive_agent_temporal.py  agent_temporal.py  agent_temporal_fixed.py  task_scheduler.py  visualization.py
tests/: test_adaptive_agent_temporal.py  test_agent_temporal.py  test_task_scheduler.py
tests/integration/: __init__.py  conftest.py  fix_test.py  test_task_scheduler_integration.py  test_temporal_adaptation_effect.py  test_time_flow.py
(+73 files in other folders)
