[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "timekeeper"
version = "0.1.0"
description = "A Hierarchical Partition-Based Approach to Temporal Optimization in Small-Scale Agent Systems"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }
authors = [{ name = "verlyn13", email = "jeffreyverlynjohnson@gmail.com" }]
dependencies = ["numpy>=1.26.4", "matplotlib>=3.8.3"]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
]
docs = [
    "jupyter>=1.0.0",
    "nbclient>=0.10.0",
    "sphinx>=7.0.0",
    "furo>=2023.9.10",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src"
